--- a/_posts/2017-12-01-test-c.md
+++ b/_posts/2017-12-01-test-c.md
@@ -4,8 +4,8 @@ year: 2016
 layout: post
 title: refrigerators using life cycle assessment (LCA) methods
 author: You Zhang
-author_img: ../assets/img/team/zy.jpg
-content_img: ../assets/img/team/zy.jpg
+author_img: {{ site.url }}/assets/img/team/zy.jpg
+content_img: {{ site.url }}/assets/img/team/zy.jpg
 journal: JCP
 link: https://www.sciencedirect.com/science/article/pii/S0959652616305492
 excerpt: abcsdf
