--- a/_posts/news/2017-0-01-news-1 copy 2.md
+++ b/_posts/news/2017-0-01-news-1 copy 2.md
@@ -4,7 +4,7 @@ year: 2017
 layout: post
 title: Environmental 3
 author: You Zhang
-img: ../assets/img/2016.jpg
+img: {{ site.url }}/assets/img/2016.jpg
 link: 
 excerpt:
 class: news
