--- a/_posts/team/2017-12-01-zy.md
+++ b/_posts/team/2017-12-01-zy.md
@@ -4,8 +4,8 @@ identify: teacher
 layout: post
 title: You Zhang
 subtitle: 博士生
-img: ../assets/img/team/zy.jpg
-flag_img: ../assets/img/flag/China.svg
+img: {{ site.url }}/assets/img/team/zy.jpg
+flag_img: {{ site.url }}/assets/img/flag/China.svg
 class: team
 
 ---
