--- a/_posts/news/2017-0-01-news-1 copy 2.md
+++ b/_posts/news/2017-0-01-news-1 copy 2.md
@@ -4,8 +4,8 @@ year: 2017
 layout: post
 title: Environmental 3
 author: You Zhang
-img: {{ site.url }}/assets/img/2016.jpg
-link: 
+img: 2016.jpg
+link:
 excerpt:
 class: news
 ---
