--- a/_posts/current-team/2017-12-01-tea-yzw.md
+++ b/_posts/current-team/2017-12-01-tea-yzw.md
@@ -5,7 +5,7 @@ layout: post
 title: 袁增伟
 subtitle: 博士、教授、博士生导师
 email: yuanzw@nju.edu.cn
-img: team/yzw.jpg
+img: team/yzengwei.jpg
 flag_img: flag/China.svg
 class: team
 
