--- a/_posts/current-team/2017-12-01-mas-pxiao.md
+++ b/_posts/current-team/2017-12-01-mas-pxiao.md
@@ -4,9 +4,9 @@ identify: master
 layout: post
 title: 潘笑
 subtitle: 硕士生
-email: 
+email:
 img: team/pxiao.jpg
 flag_img: flag/China.svg
-class: team
+classification: team
 
 ---
