--- a/_posts/current-team/2017-12-01-tea-shu.md
+++ b/_posts/current-team/2017-12-01-tea-shu.md
@@ -7,7 +7,7 @@ subtitle: 博士、副研究员
 email: shenghu@nju.edu.cn
 img: team/shu.jpg
 flag_img: flag/China.svg
-class: team
+classification: team
 
 ---
 
