--- a/_posts/current-team/2017-12-01-doc-zy.md
+++ b/_posts/current-team/2017-12-01-doc-zy.md
@@ -4,9 +4,9 @@ identify: doctor
 layout: post
 title: 张优
 subtitle: 博士生
-email: 
+email:
 img: team/zyou.jpg
 flag_img: flag/China.svg
-class: team
+classification: team
 
 ---
