--- a/_posts/current-team/2017-12-01-doc-zyj.md
+++ b/_posts/current-team/2017-12-01-doc-zyj.md
@@ -4,9 +4,9 @@ identify: doctor
 layout: post
 title: 庄裕杰
 subtitle: 博士生
-email: 
+email:
 img: team/zyujie.jpg
 flag_img: flag/China.svg
-class: team
+classification: team
 
 ---
