--- a/_posts/current-team/2017-12-01-tea-yzw.md
+++ b/_posts/current-team/2017-12-01-tea-yzw.md
@@ -7,7 +7,7 @@ subtitle: 博士、教授、博士生导师
 email: yuanzw@nju.edu.cn
 img: team/yzengwei.jpg
 flag_img: flag/China.svg
-class: team
+classification: team
 
 ---
 
